# broke.rs

./: .gitignore  Cargo.toml  docker-compose.kafka.yml  docker-compose.nats.yml  docker-compose.pulsar.yml  docker-compose.rabbit.yml  flake.nix  projects.toml
k8s/: dashboard.yaml  helmfile.yaml
k8s/nats/: values.yml
k8s/pubsub/: Chart.yaml  values.yaml
k8s/pubsub/templates/: deployment.yaml  hpa.yaml  service.yaml
src/: data.rs  kafka.rs  lib.rs  main.rs  nats.rs  pubsub.rs  pulsar.rs  rabbit.rs
tf/: main.tf
