[package]
name = "stream-operator"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.24.0"
futures = "0.3.25"
# rdkafka = { version = "0.29.0", features = ["libz", "ssl", "zstd-pkg-config", "dynamic_linking"]}
pulsar = "5.0.0"
serde = "1.0.150"
lapin = "2.1.1"
cloud-pubsub = "0.8.0"
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.0"
serde_derive = "1.0.151"
envy = "0.4.2"
serde_json = "1.0.91"
base64 = "0.20.0"
fake = { version = "2.5", features = ['derive'] }
rand = "0.8.5"

# [[bin]]
# name = "kafka"
# path = "src/kafka.rs"

[[bin]]
name = "nats"
path = "src/nats.rs"

[[bin]]
name = "pubsub"
path = "src/pubsub.rs"

[[bin]]
name = "pulsar"
path = "src/pulsar.rs"

[[bin]]
name = "rabbit"
path = "src/rabbit.rs"
